// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/[userId] > Change suspension reason > should return 403 if requesting user is not a global admin 1`] = `
{
  "billingGroupId": null,
  "billingGroupInvitationLinkId": null,
  "commentId": null,
  "createdAt": 2024-11-19T18:10:05.672Z,
  "from": null,
  "id": Any<String>,
  "jobId": null,
  "jobItemId": null,
  "ledgerItemId": null,
  "materialId": null,
  "materialImageId": null,
  "message": "{"method":"PUT","url":"/api/users/cm3ors3c400145fu8lvidrazb/suspension","body":{"reason":"New reason"},"query":{},"ip":"::ffff:127.0.0.1"}",
  "resourceId": null,
  "resourceImageId": null,
  "resourceTypeId": null,
  "shopId": null,
  "to": null,
  "type": "FORBIDDEN_ACTION",
  "updatedAt": 2024-11-19T18:10:05.672Z,
  "userBillingGroupId": null,
  "userId": Any<String>,
}
`;

exports[`/[userId] > Suspend user > should return 403 if requesting user is not a global admin 1`] = `
{
  "billingGroupId": null,
  "billingGroupInvitationLinkId": null,
  "commentId": null,
  "createdAt": 2024-11-19T18:10:05.497Z,
  "from": null,
  "id": Any<String>,
  "jobId": null,
  "jobItemId": null,
  "ledgerItemId": null,
  "materialId": null,
  "materialImageId": null,
  "message": "{"method":"POST","url":"/api/users/cm3ors36b00045fu89whnoc22/suspension","body":{},"query":{},"ip":"::ffff:127.0.0.1"}",
  "resourceId": null,
  "resourceImageId": null,
  "resourceTypeId": null,
  "shopId": null,
  "to": null,
  "type": "FORBIDDEN_ACTION",
  "updatedAt": 2024-11-19T18:10:05.497Z,
  "userBillingGroupId": null,
  "userId": Any<String>,
}
`;

exports[`/[userId] > Unsuspend user > should return 403 if requesting user is not a global admin 1`] = `
{
  "billingGroupId": null,
  "billingGroupInvitationLinkId": null,
  "commentId": null,
  "createdAt": 2024-11-19T18:10:05.596Z,
  "from": null,
  "id": Any<String>,
  "jobId": null,
  "jobItemId": null,
  "ledgerItemId": null,
  "materialId": null,
  "materialImageId": null,
  "message": "{"method":"DELETE","url":"/api/users/cm3ors39z000m5fu8edbetcyy/suspension","body":{},"query":{},"ip":"::ffff:127.0.0.1"}",
  "resourceId": null,
  "resourceImageId": null,
  "resourceTypeId": null,
  "shopId": null,
  "to": null,
  "type": "FORBIDDEN_ACTION",
  "updatedAt": 2024-11-19T18:10:05.596Z,
  "userBillingGroupId": null,
  "userId": Any<String>,
}
`;
